--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-close-on-escape",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "close react component on press escape",
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src --out-dir dist"
+    "build": "babel src --out-dir dist",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
